fixing collapse content UI bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ button {
   bottom: 2em;
   right: 2em;
 	z-index: 100;
-/* 	background: black; */
+	background: black;
 }
 
 .contents-button {
@@ -304,7 +304,7 @@ button {
 	top: 4%;
 }
 
-.overlay {
+/* .overlay {
   height: 100%;
   width: 100%;
   display: none;
@@ -314,9 +314,9 @@ button {
   left: 0;
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0, 0.9);
-}
+} */
 
-.overlay-content {
+/* .overlay-content {
   position: relative;
   top: 46%;
   width: 80%;
@@ -371,7 +371,7 @@ button {
 .overlay-search-button:hover {
 	background: white;
 	color: black
-}
+} */
 
 #nav-search-bar {
   width: 290px;
